fixed oveflow on mobile veiw

--- a/css/home/index.scss
+++ b/css/home/index.scss
@@ -1,20 +1,28 @@
 @import "../shared/variables";
 
 // Showcase
-.showcase{
+.showcase {
     height: auto;
     position: relative;
-    overflow: visible;
 
-    &::before{
-        content: '';
+    &::before {
+        content: "";
+        position: absolute;
+        height: 70px;
+        bottom: -2px;
+        left: 0px;
+        right: 0;
+        background-color: rgb(255, 255, 255);
+    }
+    &::after {
+        content: "";
         position: absolute;
         height: 100px;
-        bottom: -70px;
-        left: 0;
+        bottom: 0px;
+        left: 0px;
         right: 0;
-        background-color: white;
-        transform: skewy(-3deg)
+        background-color: rgb(255, 255, 255);
+        transform: skewy(-3deg);
     }
 
     .grid-md {
@@ -29,18 +37,18 @@
         margin: 20px 0;
     }
 
-    &__form{
+    &__form {
         position: relative;
-        top: 60px;
+
         height: 350px;
         padding: 40px;
-        z-index: 0;
+        z-index: 10;
 
         .form-control {
             margin: 30px 0;
 
             input[type="text"],
-            input[type='email'] {
+            input[type="email"] {
                 outline: none;
                 border: none;
                 border-bottom: 1px solid #bdbdbd;
@@ -53,20 +61,20 @@
 }
 
 // Status
-.stats{
+.stats {
     padding-top: 100px;
 
-    &__heading{
+    &__heading {
         max-width: 500px;
         margin: auto;
     }
 
-    .grid-md{
-        h3{
+    .grid-md {
+        h3 {
             font-size: 35px;
         }
 
-        p{
+        p {
             font-size: 20px;
             font-weight: bold;
         }
@@ -74,27 +82,27 @@
 }
 
 // Cli
-.cli{
-    .grid-md{
+.cli {
+    .grid-md {
         grid-template-rows: repeat(2, 1fr);
 
-        & > :first-child{
-            grid-column: 1/span 2;
-            grid-row: 1/span 2;
+        & > :first-child {
+            grid-column: 1 / span 2;
+            grid-row: 1 / span 2;
         }
     }
 }
 
 // Clud
-.cloud{
-    .grid-md{
+.cloud {
+    .grid-md {
         grid-template-columns: 4fr 3fr;
         grid-auto-flow: dense;
     }
 }
 
 // Languages
-.languages{
+.languages {
     padding-bottom: 40px;
 
     .flex {
@@ -103,12 +111,12 @@
     .card {
         margin: 18px 10px 40px;
         cursor: pointer;
-        transition: transform .25s ease-in-out;
+        transition: transform 0.25s ease-in-out;
         &:hover {
             transform: translatey(-10px);
         }
 
-        h4{
+        h4 {
             font-size: 1.25rem;
             margin-bottom: 10px;
         }
