--- a/css/shared/_global.scss
+++ b/css/shared/_global.scss
@@ -50,9 +50,11 @@ code, pre {
 // End Resets
 
 .container {
-    max-width: 1100px;
+    max-width: 100%;
+    width: 1100px;
     margin: auto;
     padding: 0 30px;
+    overflow: hidden;
 }
 
 .flex {
