--- a/css/shared/_media.scss
+++ b/css/shared/_media.scss
@@ -21,10 +21,11 @@
     .showcase{
         height: auto;
         text-align: center;
-        padding-top: 100px;
+        padding-top: 30px;
         &__text{
             width: 80%;
             margin: auto;
+            margin-bottom: 20px;
         }
     }
 
